PROJECT(JAUSLIB)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 
file(GLOB_RECURSE SOURCE_H RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.h)
file(GLOB_RECURSE SOURCE_C RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} src/*.c)

ADD_EXECUTABLE(./lib/libjaus.so ${SOURCE_H} ${SOURCE_C})
target_link_libraries(./lib/libjaus.so ${SOURCE_H})

SET(CMAKE CXX FLAGS “-Wall”)
set(CMAKE_BUILD_TYPE Debug)

